// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DwollaPayIn 1`] = `
<dwolla-payin
  blob=""
  customerId="123"
  token=""
/>
`;

exports[`with optional props 1`] = `
<dwolla-payin
  amount={10}
  blob=""
  customerId="123"
  token=""
/>
`;
